# nbkit

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  xbuild.ps1  xbuild.sh
include/nbkit/: event.h  singleton.h
nbkit/: allow_cmake_build.cpp  event.h  log.h  log_config_example.h  matrix.h  random_utils.h  singleton.h
tests/: CMakeLists.txt  log_config_test.h  test_event.cpp  test_log_default.cpp  test_log_override.cpp  test_matrix.cpp  test_random_utils.cpp  test_singleton.cpp
